traces/bug_739.txt
src/mpi/parallelempi.cpp:1380: error: DEAD_STORE
  The value written to &rA (type MatriceCreuse<double>*) is never used.
Showing all 1 steps of the trace


src/mpi/parallelempi.cpp:1380:13: Write of unused value
1378.               *rm=R(); // set the matrix to Zero ..
1379.               r->A.master(rm);
1380.               rA=r->A;
                    ^
1381.               
1382.           }
